--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ python-exceptions/1-main.py
 python-exceptions/2-main.py
 python-exceptions/3-main.py
 python-exceptions/4-main.py
+python-exceptions/5-main.py
