--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ python-exceptions/2-main.py
 python-exceptions/3-main.py
 python-exceptions/4-main.py
 python-exceptions/5-main.py
+python-exceptions/6-main.py
