--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ python-exceptions/3-main.py
 python-exceptions/4-main.py
 python-exceptions/5-main.py
 python-exceptions/6-main.py
+python-test_driven_development/2-main.py
