--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ python-exceptions/4-main.py
 python-exceptions/5-main.py
 python-exceptions/6-main.py
 python-test_driven_development/2-main.py
+python-test_driven_development/3-main.py
