Update .gitignore to exclude python-test_driven_development/4-main.py

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ python-exceptions/5-main.py
 python-exceptions/6-main.py
 python-test_driven_development/2-main.py
 python-test_driven_development/3-main.py
+python-test_driven_development/4-main.py
