--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ python-exceptions/6-main.py
 python-test_driven_development/2-main.py
 python-test_driven_development/3-main.py
 python-test_driven_development/4-main.py
+python-test_driven_development/5-main.py
