--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ python-test_driven_development/4-main.py
 python-test_driven_development/5-main.py
 python-test_driven_development/6-main.py
 python-classes/0-main.py
+python-classes/0-main.py
