--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ python-test_driven_development/5-main.py
 python-test_driven_development/6-main.py
 python-classes/0-main.py
 python-classes/0-main.py
+python-classes/1-main.py
