--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ python-test_driven_development/6-main.py
 python-classes/0-main.py
 python-classes/0-main.py
 python-classes/1-main.py
+python-classes/2-main.py
