Add python-more_classes/0-main.py to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ python-classes/3-main.py
 python-classes/4-main.py
 python-classes/5-main.py
 python-classes/6-main.py
+python-more_classes/0-main.py
