--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ python-classes/4-main.py
 python-classes/5-main.py
 python-classes/6-main.py
 python-more_classes/0-main.py
+python-more_classes/1-main.py
