--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ python-classes/5-main.py
 python-classes/6-main.py
 python-more_classes/0-main.py
 python-more_classes/1-main.py
+python-more_classes/2-main.py
