--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ python-classes/6-main.py
 python-more_classes/0-main.py
 python-more_classes/1-main.py
 python-more_classes/2-main.py
+python-more_classes/3-main.py
