--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ python-more_classes/0-main.py
 python-more_classes/1-main.py
 python-more_classes/2-main.py
 python-more_classes/3-main.py
+python-more_classes/4-main.py
