--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ python-more_classes/1-main.py
 python-more_classes/2-main.py
 python-more_classes/3-main.py
 python-more_classes/4-main.py
+python-more_classes/5-main.py
