--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ python-more_classes/2-main.py
 python-more_classes/3-main.py
 python-more_classes/4-main.py
 python-more_classes/5-main.py
+python-more_classes/6-main.py
