--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ python-more_classes/3-main.py
 python-more_classes/4-main.py
 python-more_classes/5-main.py
 python-more_classes/6-main.py
+python-more_classes/7-main.py
