--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ python-more_classes/4-main.py
 python-more_classes/5-main.py
 python-more_classes/6-main.py
 python-more_classes/7-main.py
+python-more_classes/8-main.py
