--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ python-more_classes/5-main.py
 python-more_classes/6-main.py
 python-more_classes/7-main.py
 python-more_classes/8-main.py
+python-more_classes/9-main.py
