--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ python-more_classes/6-main.py
 python-more_classes/7-main.py
 python-more_classes/8-main.py
 python-more_classes/9-main.py
+python-inheritance/0-main.py
