--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ python-more_classes/7-main.py
 python-more_classes/8-main.py
 python-more_classes/9-main.py
 python-inheritance/0-main.py
+python-inheritance/1-main.py
