--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ python-more_classes/8-main.py
 python-more_classes/9-main.py
 python-inheritance/0-main.py
 python-inheritance/1-main.py
+python-inheritance/2-main.py
