--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ python-more_classes/9-main.py
 python-inheritance/0-main.py
 python-inheritance/1-main.py
 python-inheritance/2-main.py
+python-inheritance/3-main.py
