--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ python-inheritance/1-main.py
 python-inheritance/2-main.py
 python-inheritance/3-main.py
 python-inheritance/4-main.py
+python-inheritance/5-main.py
