--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ python-inheritance/5-main.py
 python-inheritance/6-main.py
 python-inheritance/7-main.py
 python-inheritance/8-main.py
+python-inheritance/9-main.py
