--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ python-inheritance/6-main.py
 python-inheritance/7-main.py
 python-inheritance/8-main.py
 python-inheritance/9-main.py
+python-inheritance/10-main.py
