--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ python-inheritance/7-main.py
 python-inheritance/8-main.py
 python-inheritance/9-main.py
 python-inheritance/10-main.py
+python-inheritance/11-main.py
