--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ python-inheritance/8-main.py
 python-inheritance/9-main.py
 python-inheritance/10-main.py
 python-inheritance/11-main.py
+*__pycache__
