--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ python-inheritance/9-main.py
 python-inheritance/10-main.py
 python-inheritance/11-main.py
 *__pycache__
+python-abc/main_00_abc.py
