--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ python-inheritance/10-main.py
 python-inheritance/11-main.py
 *__pycache__
 python-abc/main_00_abc.py
+python-abc/main_01_duck_typing.py
