--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ python-inheritance/11-main.py
 *__pycache__
 python-abc/main_00_abc.py
 python-abc/main_01_duck_typing.py
+python-abc/main_02_verboselist.py
