--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ python-inheritance/11-main.py
 python-abc/main_00_abc.py
 python-abc/main_01_duck_typing.py
 python-abc/main_02_verboselist.py
+python-abc/main_03_countediterator.py
