--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ python-abc/main_02_verboselist.py
 python-abc/main_03_countediterator.py
 python-abc/main_04_flyingfish.py
 python-abc/main_05_dragon.py
+python-input_output/0-main.py
+python-input_output/my_file_0.txt
