main 1 and my first file text in gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ python-abc/main_04_flyingfish.py
 python-abc/main_05_dragon.py
 python-input_output/0-main.py
 python-input_output/my_file_0.txt
+python-input_output/1-main.py
+python-input_output/my_first_file.txt
