--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ python-input_output/0-main.py
 python-input_output/my_file_0.txt
 python-input_output/1-main.py
 python-input_output/my_first_file.txt
+python-input_output/2-main.py
+python-input_output/file_append.txt
