--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ python-input_output/1-main.py
 python-input_output/my_first_file.txt
 python-input_output/2-main.py
 python-input_output/file_append.txt
+python-input_output/3-main.py
