Add mains and help files to gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ python-input_output/my_dict.json
 python-input_output/my_list.json
 python-input_output/my_set.json
 python-input_output/6-main.py
+python-input_output/8-main_2.py
+python-input_output/8-main.py
+python-input_output/8-my_class_2.py
+python-input_output/8-my_class.py
