--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ python-input_output/my_set.json
 python-input_output/6-main.py
 python-input_output/8-main_2.py
 python-input_output/8-main.py
+python-input_output/9-main.py
