Add main 10 to gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ python-input_output/6-main.py
 python-input_output/8-main_2.py
 python-input_output/8-main.py
 python-input_output/9-main.py
+python-input_output/10-main.py
