--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ python-input_output/8-main_2.py
 python-input_output/8-main.py
 python-input_output/9-main.py
 python-input_output/10-main.py
+python-input_output/11-main.py
