--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ python-input_output/8-main.py
 python-input_output/9-main.py
 python-input_output/10-main.py
 python-input_output/11-main.py
+python-input_output/12-main.py
