main function 0 to gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ python-input_output/9-main.py
 python-input_output/10-main.py
 python-input_output/11-main.py
 python-input_output/12-main.py
+python-serialization/0-main.py
