Add main 1 to gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ python-input_output/10-main.py
 python-input_output/11-main.py
 python-input_output/12-main.py
 python-serialization/0-main.py
+python-serialization/1-main.py
