Add main 2 to gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ python-input_output/11-main.py
 python-input_output/12-main.py
 python-serialization/0-main.py
 python-serialization/1-main.py
+python-serialization/main_02_csv.py
