--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ python-input_output/12-main.py
 python-serialization/0-main.py
 python-serialization/1-main.py
 python-serialization/main_02_csv.py
+python-serialization/3-main.py
