Add restful-api/main_02_requests.py to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ python-serialization/0-main.py
 python-serialization/1-main.py
 python-serialization/main_02_csv.py
 python-serialization/3-main.py
+restful-api/main_02_requests.py
