Add posts.csv to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ python-serialization/1-main.py
 python-serialization/main_02_csv.py
 python-serialization/3-main.py
 restful-api/main_02_requests.py
+restful-api/posts.csv
