Update .gitignore to exclude myenv, main.py, and __pycache__ directories

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ python-serialization/main_02_csv.py
 python-serialization/3-main.py
 restful-api/main_02_requests.py
 restful-api/posts.csv
+myenv/
+*main.py
+*__pycache__/
