--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ myenv/
 *main.py
 *__pycache__/
 python-object_relational_mapping/0-select_states.sql
+python-object_relational_mapping/4-cities_by_state.sql
