--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ myenv/
 *__pycache__/
 python-object_relational_mapping/0-select_states.sql
 python-object_relational_mapping/4-cities_by_state.sql
+python-object_relational_mapping/6-model_state.sql
+.gitignore
+python-object_relational_mapping/6-model_state.py
