--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ python-object_relational_mapping/6-model_state.sql
 python-object_relational_mapping/6-model_state.py
 python-object_relational_mapping/7-model_state_fetch_all.sql
 python-object_relational_mapping/14-model_city_fetch_by_state.sql
+javascript-dom_manipulation/*-main.html
